@@ -117,7 +117,7 @@ SDCC Compiler User Guide
 \begin_layout Date
 
 \size normal
-SDCC 3.1.1
+SDCC 3.1.2
 \size footnotesize
 
 \begin_inset Newline newline
